--- a/notebooks/geneticFeedbackModel.ipynb
+++ b/notebooks/geneticFeedbackModel.ipynb
@@ -9,7 +9,8 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from deepRD import integrateGillespie, integrateTauLeap, reactionModel\n",
+    "from deepRD import integrateGillespie, integrateTauLeap \n",
+    "from deepRD.plotFunctions import plotTrajectories\n",
     "from deepRD.models import geneticFeedback, schlogl"
    ]
   },
@@ -21,10 +22,10 @@
    "outputs": [],
    "source": [
     "# Create a genetic feedback stochastic model, given initial conditions for:\n",
-    "G = 4     # Gene\n",
-    "Gstar = 5 # Gene*\n",
-    "M = 2     # mRNA\n",
-    "P = 3     # protein\n",
+    "G = 1     # Gene\n",
+    "Gstar = 0 # Gene*\n",
+    "M = 80     # mRNA\n",
+    "P = 0     # protein\n",
     "genFeedbackModel = geneticFeedback(G, Gstar, M, P)"
    ]
   },
@@ -35,19 +36,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "integrateGillespie(genFeedbackModel, tfinal = 100)"
+    "t, X = integrateGillespie(genFeedbackModel, tfinal = 0.5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af1ee2d4",
+   "id": "0ebbb25e",
    "metadata": {},
    "outputs": [],
    "source": [
     "genFeedbackModel.dt = 0.0000001\n",
     "integrateTauLeap(genFeedbackModel, tfinal = 1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "483b8da4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plotTrajectories(t, X , names = genFeedbackModel.names) #dexes = [1,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b84fc682",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
