Added FPT calculation and plot

--- a/notebooks/geneticFeedbackModel.ipynb
+++ b/notebooks/geneticFeedbackModel.ipynb
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from deepRD import integrateGillespie, integrateTauLeap \n",
-    "from deepRD.plotFunctions import plotTrajectories\n",
+    "from deepRD.plotFunctions import plotTrajectories, plotFPTs\n",
     "from deepRD.models import geneticFeedback, schlogl"
    ]
   },
@@ -32,38 +32,78 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f3faef32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set model parameters\n",
+    "rhou = 2.5\n",
+    "rhob = 0.0 #10**(-1)\n",
+    "sigmau = 10**5\n",
+    "sigmab = 10**3\n",
+    "dm = 10.0\n",
+    "dp = 1.0\n",
+    "k = 10.0\n",
+    "volume = 10.0\n",
+    "genFeedbackModel.setModelParameters(rhou, rhob, sigmau, sigmab, dm, dp, k, volume)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a0fcdb69",
    "metadata": {},
    "outputs": [],
    "source": [
-    "t, X = integrateGillespie(genFeedbackModel, tfinal = 0.5)"
+    "t, X = integrateGillespie(genFeedbackModel, tfinal = 2.0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ebbb25e",
+   "id": "50672545",
    "metadata": {},
    "outputs": [],
    "source": [
-    "genFeedbackModel.dt = 0.0000001\n",
-    "integrateTauLeap(genFeedbackModel, tfinal = 1)"
+    "plotTrajectories(t, X , names = genFeedbackModel.names, indexes = [2,3]);"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "483b8da4",
+   "id": "191dfd20",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plotTrajectories(t, X , names = genFeedbackModel.names) #dexes = [1,3])"
+    "#genFeedbackModel.dt = 0.0000001\n",
+    "#integrateTauLeap(genFeedbackModel, tfinal = 1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b84fc682",
+   "id": "69023204",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numSamples = 250\n",
+    "FPTs = genFeedbackModel.oneCycleFPTs(numSamples, G, Gstar, M, P)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f500c390",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plotFPTs(FPTs, bins=50 , name=\"FPT distribution for one mRNA cyle\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04cb134d",
    "metadata": {},
    "outputs": [],
    "source": []
