implemented periodic boundary

--- a/notebooks/overdampedLangevin.ipynb
+++ b/notebooks/overdampedLangevin.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5834b78c",
+   "execution_count": 1,
+   "id": "7e2321f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,10 +15,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "394049c6",
+   "execution_count": 2,
+   "id": "5e81c478",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "object of type 'particle' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-7333b4c600be>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Define particle list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mparticle1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdeepRD\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparticle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mparticleList\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdeepRD\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparticleList\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mparticle1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/run/media/maojrs/Mr300/Documents/Posdoc/projects/deepRD/deepRD/particle.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, particleList)\u001b[0m\n\u001b[1;32m     21\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparticleList\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparticleList\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumParticles\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparticleList\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdimension\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparticleList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__getitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: object of type 'particle' has no len()"
+     ]
+    }
+   ],
    "source": [
     "# Define particle list\n",
     "particle1 = deepRD.particle([0,0,0],1)\n",
@@ -28,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3237af2",
+   "id": "c0ded0a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,13 +49,14 @@
     "dt = 0.01\n",
     "stride = 1\n",
     "tfinal = 10\n",
-    "diffIntegrator = overdampedLangevin(dt,stride,tfinal)"
+    "boxsize = 1\n",
+    "diffIntegrator = overdampedLangevin(dt, stride, tfinal, boxsize)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bde34b43",
+   "id": "ab0e66b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18dbd02c",
+   "id": "34052633",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "871c27e2",
+   "id": "9932c319",
    "metadata": {},
    "outputs": [],
    "source": [
