Sampling from binned data ready

--- a/notebooks/langevinAux.ipynb
+++ b/notebooks/langevinAux.ipynb
@@ -10,7 +10,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import deepRD\n",
-    "from deepRD.diffusionIntegrators import langevinAux"
+    "from deepRD.diffusionIntegrators import langevinAux\n",
+    "from deepRD.noiseSampler import noiseSampler as noiseSamplerDefault"
    ]
   },
   {
@@ -32,12 +33,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37fff988",
+   "id": "5f483483",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define noise sampler\n",
-    "noiseSampler = deepRD.noiseSampler()"
+    "noiseSampler = noiseSamplerDefault()"
    ]
   },
   {
