Langevin noise sampler working with binned data

--- a/notebooks/langevinNoiseSampler.ipynb
+++ b/notebooks/langevinNoiseSampler.ipynb
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import deepRD\n",
-    "from deepRD.diffusionIntegrators import langevinAux\n",
+    "from deepRD.diffusionIntegrators import langevinNoiseSampler\n",
     "from deepRD.noiseSampler import noiseSampler as noiseSamplerDefault"
    ]
   },
@@ -54,7 +54,7 @@
     "tfinal = 10\n",
     "kBT = 1\n",
     "boxsize = 1\n",
-    "diffIntegrator = langevinAux(dt, stride, tfinal, noiseSampler, kBT, boxsize)"
+    "diffIntegrator = langevinNoiseSampler(dt, stride, tfinal, noiseSampler, kBT, boxsize)"
    ]
   },
   {
