Updated Lanegvin integrators (fixed mass bug)

--- a/notebooks/stochasticClosure/01_generateBinningSamplingModel.ipynb
+++ b/notebooks/stochasticClosure/01_generateBinningSamplingModel.ipynb
@@ -9,6 +9,7 @@
    "source": [
     "import numpy as np\n",
     "import os\n",
+    "import sys\n",
     "import pickle\n",
     "from itertools import product\n",
     "import matplotlib.pyplot as plt\n",
@@ -60,8 +61,8 @@
     "print(\"Loading data ...\")\n",
     "for i in range(nfiles):\n",
     "    traj = trajectoryTools.loadTrajectory(fnamebase, i)\n",
-    "    trajs.append(traj)    \n",
-    "    print(\"File \", i+1, \" of \", nfiles, \" done.\", end=\"\\r\")"
+    "    trajs.append(traj)\n",
+    "    sys.stdout.write(\"File \" + str(i+1) + \" of \" + str(nfiles) + \" done.\" + \"\\r\")"
    ]
   },
   {
@@ -71,11 +72,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load binned data for ri+1|qi\n",
+    "# Load binned data for ri+1|qi. Note one timestep from data equal parameters['dt'] * parameters['stride']\n",
     "numbins = 50\n",
-    "boxsizeBinning = 3 #boxsize\n",
-    "qiBinnedData = binnedData_qi(boxsizeBinning,numbins)\n",
-    "qiBinnedData.loadData(trajs,timestepMultiplier = 5)\n",
+    "lagtimesteps = 1  # Number of timesteps (from data) to look back in time \n",
+    "boxsizeBinning = boxsize\n",
+    "qiBinnedData = binnedData_qi(boxsizeBinning, numbins, lagtimesteps)\n",
+    "qiBinnedData.loadData(trajs)\n",
     "qiBinnedData.parameterDictionary = parameterDictionary"
    ]
   },
@@ -99,9 +101,10 @@
    "outputs": [],
    "source": [
     "# Load binned data for ri+1|ri\n",
-    "numbins = 100\n",
-    "riBinnedData = binnedData_ri(numbins)\n",
-    "riBinnedData.loadData(trajs,timestepMultiplier = 5)\n",
+    "numbins = 50\n",
+    "lagtimesteps = 1\n",
+    "riBinnedData = binnedData_ri(numbins, lagtimesteps)\n",
+    "riBinnedData.loadData(trajs,lagtimesteps = 1)\n",
     "riBinnedData.parameterDictionary = parameterDictionary"
    ]
   },
@@ -128,13 +131,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5dc61a24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qiBinnedData.nearestOccupiedNeighbour(np.array([24,24,24]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2d69237",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(qiBinnedData.data[tuple([24, 24, 24])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "14dabf97",
    "metadata": {},
    "outputs": [],
    "source": [
     "testDist = []\n",
     "for i in range(10000):\n",
-    "    testDist.append(qiBinnedData.sample(np.array([15.9,-0.0,0.0])))"
+    "    testDist.append(qiBinnedData.sample(np.array([0.0,0.0,0.0])))"
    ]
   },
   {
@@ -145,8 +168,8 @@
    "outputs": [],
    "source": [
     "labels = ['x', 'y', 'z']\n",
-    "for i in range(1):\n",
-    "    plt.plot(np.array(testDist)[:,i], 'o',label = labels[i])\n",
+    "for i in range(3):\n",
+    "    plt.plot(np.array(testDist)[:,i], 'o', alpha = 0.5, label = labels[i])\n",
     "plt.legend()"
    ]
   },
@@ -157,7 +180,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "position = np.array([-0.9,-0.0,0.0])\n",
+    "position = np.array([0.0,0.0,0.0])\n",
     "binIndex = qiBinnedData.getBinIndex(position)\n",
     "occupiedBinIndex = qiBinnedData.nearestOccupiedNeighbour(binIndex)\n",
     "availableData = qiBinnedData.data[occupiedBinIndex]\n",
@@ -181,7 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for xx in np.arange(-0.5,0.5, 0.1):\n",
+    "for xx in np.arange(-5,5, 0.5):\n",
     "    position = np.array([xx,0.0,0.0])\n",
     "    binIndex = qiBinnedData.getBinIndex(position)\n",
     "    occupiedBinIndex = qiBinnedData.nearestOccupiedNeighbour(binIndex)\n",
