Updated Langevin integrators

--- a/notebooks/stochasticClosure/02_runLangevinNoiseSampler.ipynb
+++ b/notebooks/stochasticClosure/02_runLangevinNoiseSampler.ipynb
@@ -8,13 +8,16 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "import pickle\n",
     "import deepRD\n",
     "from deepRD.diffusionIntegrators import langevinNoiseSampler, langevin\n",
+    "from deepRD.potentials import harmonic\n",
     "from deepRD.noiseSampler import noiseSampler\n",
     "from deepRD.noiseSampler import binnedData_qi, binnedData_ri\n",
-    "import deepRD.tools.trajectoryTools as trajectoryTools\n"
+    "import deepRD.tools.trajectoryTools as trajectoryTools\n",
+    "matplotlib.rcParams.update({'font.size': 15})"
    ]
   },
   {
@@ -73,6 +76,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7c1d1bd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define external potential\n",
+    "kconstant = 0.3\n",
+    "harmonicPotential = harmonic(kconstant)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9131da5a",
    "metadata": {},
    "outputs": [],
@@ -80,12 +95,16 @@
     "# Define integrator\n",
     "#dt = binnedData.lagTimesteps * parameters['dt'] * parameters['stride'] #wrong\n",
     "dt = parameters['dt']\n",
-    "integratorStride = 1\n",
-    "tfinal = 100000\n",
+    "integratorStride = 5\n",
+    "tfinal = 10000 #100000\n",
     "KbT = parameters['KbT']\n",
     "boxsize = parameters['boxsize']\n",
-    "diffIntegrator = langevinNoiseSampler(dt, integratorStride, tfinal, nSampler, KbT, boxsize)\n",
-    "#diffIntegrator = langevin(dt, integratorStride, tfinal, KbT, boxsize)"
+    "#integType = \"symplecticEuler\"\n",
+    "integType = \"BAOAB\"\n",
+    "diffIntegrator = langevinNoiseSampler(dt, integratorStride, tfinal, nSampler, KbT, \n",
+    "                                      boxsize, integratorType = integType)\n",
+    "diffIntegrator.setExternalPotential(harmonicPotential)\n",
+    "#diffIntegrator = langevin(dt, integratorStride, tfinal, KbT, boxsize, integratorType = integType)"
    ]
   },
   {
@@ -123,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b71eeafb",
+   "id": "ccf5f27b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b077dfae",
+   "id": "ed5bde3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +250,7 @@
     "    xvel_ref.append(traj[i][4])\n",
     "    yvel_ref.append(traj[i][5])\n",
     "    zvel_ref.append(traj[i][6])\n",
-    "averagepos = (np.array(xpos)+np.array(ypos)+np.array(zpos))/3.0\n",
+    "averagepos = (np.array(xpos_ref)+np.array(ypos_ref)+np.array(zpos_ref))/3.0\n",
     "#plt.hist(averagepos, bins = numbins, density= True, alpha =0.3)\n",
     "plt.hist(np.array(xpos_ref), bins = numbins, density= True, alpha=0.5, label='x')\n",
     "plt.hist(np.array(ypos_ref), bins = numbins, density= True, alpha=0.5, label='y')\n",
@@ -243,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25da0245",
+   "id": "2b990353",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b4f5308",
+   "id": "8cfc7626",
    "metadata": {},
    "source": [
     "## Comparison"
@@ -265,15 +284,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e54fee3c",
+   "id": "10a11ada",
    "metadata": {},
    "outputs": [],
    "source": [
     "numbins=50\n",
-    "plt.hist(np.array(xvel), bins = numbins, density= True, alpha=0.5, label='x coarse-grain')\n",
-    "plt.hist(np.array(xvel_ref), bins = numbins, density= True, alpha=0.5, label='x reference')\n",
-    "plt.legend()\n",
-    "plt.show()"
+    "plt.hist(np.array(xvel), bins = numbins, density= True, alpha=0.5, label='coarse-grain')\n",
+    "plt.hist(np.array(xvel_ref), bins = numbins, density= True, alpha=0.5, label='reference')\n",
+    "plt.legend(fontsize = 14)\n",
+    "plt.xlabel(\"velocity\")\n",
+    "plt.ylabel(\"velocity distribution\")\n",
+    "#plt.show()\n",
+    "plt.savefig(\"velocity_test.pdf\", bbox_inches='tight')"
    ]
   },
   {
@@ -293,7 +315,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a8fef46",
+   "id": "661d806e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c713bc4",
    "metadata": {},
    "outputs": [],
    "source": []
