--- a/notebooks/stochasticClosure/01_generateBinningSamplingModel.ipynb
+++ b/notebooks/stochasticClosure/01_generateBinningSamplingModel.ipynb
@@ -74,9 +74,9 @@
    "source": [
     "# Load binned data for ri+1|qi. Note one timestep from data equal parameters['dt'] * parameters['stride']\n",
     "numbins = 50\n",
-    "lagtimesteps = 1  # Number of timesteps (from data) to look back in time \n",
+    "lagTimesteps = 1  # Number of timesteps (from data) to look back in time \n",
     "boxsizeBinning = boxsize\n",
-    "qiBinnedData = binnedData_qi(boxsizeBinning, numbins, lagtimesteps)\n",
+    "qiBinnedData = binnedData_qi(boxsizeBinning, numbins, lagTimesteps)\n",
     "qiBinnedData.loadData(trajs)\n",
     "qiBinnedData.parameterDictionary = parameterDictionary"
    ]
@@ -102,9 +102,9 @@
    "source": [
     "# Load binned data for ri+1|ri\n",
     "numbins = 50\n",
-    "lagtimesteps = 1\n",
-    "riBinnedData = binnedData_ri(numbins, lagtimesteps)\n",
-    "riBinnedData.loadData(trajs,lagtimesteps = 1)\n",
+    "lagTimesteps = 1\n",
+    "riBinnedData = binnedData_ri(numbins, lagTimesteps)\n",
+    "riBinnedData.loadData(trajs)\n",
     "riBinnedData.parameterDictionary = parameterDictionary"
    ]
   },
