--- a/notebooks/stochasticClosure/02_runLangevinNoiseSampler.ipynb
+++ b/notebooks/stochasticClosure/02_runLangevinNoiseSampler.ipynb
@@ -8,6 +8,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import random\n",
+    "from scipy import stats\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "import pickle\n",
@@ -27,7 +29,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "localDataDirectory = './data/'"
+    "localDataDirectory = './data/'\n",
+    "numSimulations = 100"
    ]
   },
   {
@@ -99,12 +102,11 @@
     "tfinal = 10000 #100000\n",
     "KbT = parameters['KbT']\n",
     "boxsize = parameters['boxsize']\n",
-    "#integType = \"symplecticEuler\"\n",
-    "integType = \"BAOAB\"\n",
+    "#integType = \"ABOBA\"\n",
+    "equilibrationSteps = 2000\n",
     "diffIntegrator = langevinNoiseSampler(dt, integratorStride, tfinal, nSampler, KbT, \n",
-    "                                      boxsize, integratorType = integType)\n",
-    "diffIntegrator.setExternalPotential(harmonicPotential)\n",
-    "#diffIntegrator = langevin(dt, integratorStride, tfinal, KbT, boxsize, integratorType = integType)"
+    "                                      boxsize, equilibrationSteps = equilibrationSteps)\n",
+    "diffIntegrator.setExternalPotential(harmonicPotential)"
    ]
   },
   {
@@ -114,42 +116,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t, X, V= diffIntegrator.propagate(particleList)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30690340",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot trajectory in x, y and z\n",
     "particleIndex = 0\n",
-    "#plt.plot(X[:,particleIndex], label = ['x','y','z']);\n",
-    "xpos = X[:,particleIndex,0]\n",
-    "ypos = X[:,particleIndex,1]\n",
-    "zpos = X[:,particleIndex,2]\n",
-    "xvel = V[:,particleIndex,0]\n",
-    "yvel = V[:,particleIndex,1]\n",
-    "zvel = V[:,particleIndex,2]\n",
-    "plt.plot(t,xpos, '-', label = 'x');\n",
-    "plt.plot(t,ypos, '-', label = 'y');\n",
-    "plt.plot(t,zpos, '-', label = 'z');\n",
-    "plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ccf5f27b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(t,xvel, '-', label = 'x');\n",
-    "plt.plot(t,yvel, '-', label = 'y');\n",
-    "plt.plot(t,zvel, '-', label = 'z');\n",
-    "plt.legend()"
+    "xpos = np.empty(0)\n",
+    "ypos = np.empty(0)\n",
+    "zpos = np.empty(0)\n",
+    "xvel = np.empty(0)\n",
+    "yvel = np.empty(0)\n",
+    "zvel = np.empty(0)\n",
+    "for i in range(numSimulations):\n",
+    "    print(\"Simulation \", i+1)\n",
+    "    position = position = np.array([boxsize*random.random()-0.5*boxsize,\n",
+    "                                    boxsize*random.random()-0.5*boxsize,\n",
+    "                                    boxsize*random.random()-0.5*boxsize])\n",
+    "    particle1 = deepRD.particle(position, D, velocity, mass)\n",
+    "    particleList = deepRD.particleList([particle1])\n",
+    "    t, X, V= diffIntegrator.propagate(particleList)\n",
+    "    xpos = np.concatenate((xpos, X[:,particleIndex,0]))\n",
+    "    ypos = np.concatenate((ypos, X[:,particleIndex,1]))\n",
+    "    zpos = np.concatenate((zpos, X[:,particleIndex,2]))\n",
+    "    xvel = np.concatenate((xvel, V[:,particleIndex,0]))\n",
+    "    yvel = np.concatenate((yvel, V[:,particleIndex,1]))\n",
+    "    zvel = np.concatenate((zvel, V[:,particleIndex,2]))\n",
+    "    print(\"\")"
    ]
   },
   {
@@ -159,9 +147,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "numbins=25\n",
+    "numbins=50\n",
     "#averagepos = (np.array(xpos)+np.array(ypos)+np.array(zpos))/3.0\n",
-    "#plt.hist(averagepos, bins = numbins, density= True, #alpha =0.3)\n",
+    "#plt.hist(averagepos, bins = numbins, density= True, alpha =0.3)\n",
     "plt.hist(xpos, bins = numbins, density= True, alpha=0.5, label='x')\n",
     "plt.hist(ypos, bins = numbins, density= True, alpha=0.5, label='y')\n",
     "plt.hist(zpos, bins = numbins, density= True, alpha=0.5, label='z')\n",
@@ -177,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "numbins=25\n",
+    "numbins=50\n",
     "#averagepos = (np.array(xpos)+np.array(ypos)+np.array(zpos))/3.0\n",
     "#plt.hist(averagepos, bins = numbins, density= True, #alpha =0.3)\n",
     "plt.hist(xvel, bins = numbins, density= True, alpha=0.5, label='x')\n",
@@ -225,7 +213,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "traj = trajectoryTools.loadTrajectory(fnamebase, 0)"
+    "# Load trajectory data from h5 files (only of distinguished particle)\n",
+    "trajs = []\n",
+    "print(\"Loading data ...\")\n",
+    "for i in range(numSimulations):\n",
+    "    traj = trajectoryTools.loadTrajectory(fnamebase, i)\n",
+    "    trajs.append(traj)    \n",
+    "    print(\"File \", i+1, \" of \", numSimulations, \" done.\", end=\"\\r\")"
    ]
   },
   {
@@ -242,14 +236,15 @@
     "xvel_ref = []\n",
     "yvel_ref = []\n",
     "zvel_ref = []\n",
-    "numbins = 100\n",
-    "for i in range(len(traj)):\n",
-    "    xpos_ref.append(traj[i][1])\n",
-    "    ypos_ref.append(traj[i][2])\n",
-    "    zpos_ref.append(traj[i][3])\n",
-    "    xvel_ref.append(traj[i][4])\n",
-    "    yvel_ref.append(traj[i][5])\n",
-    "    zvel_ref.append(traj[i][6])\n",
+    "numbins = 50\n",
+    "for traj in trajs:\n",
+    "    for i in range(len(traj)):\n",
+    "        xpos_ref.append(traj[i][1])\n",
+    "        ypos_ref.append(traj[i][2])\n",
+    "        zpos_ref.append(traj[i][3])\n",
+    "        xvel_ref.append(traj[i][4])\n",
+    "        yvel_ref.append(traj[i][5])\n",
+    "        zvel_ref.append(traj[i][6])\n",
     "averagepos = (np.array(xpos_ref)+np.array(ypos_ref)+np.array(zpos_ref))/3.0\n",
     "#plt.hist(averagepos, bins = numbins, density= True, alpha =0.3)\n",
     "plt.hist(np.array(xpos_ref), bins = numbins, density= True, alpha=0.5, label='x')\n",
@@ -289,9 +284,12 @@
    "outputs": [],
    "source": [
     "numbins=50\n",
-    "plt.hist(np.array(xvel), bins = numbins, density= True, alpha=0.5, label='coarse-grain')\n",
-    "plt.hist(np.array(xvel_ref), bins = numbins, density= True, alpha=0.5, label='reference')\n",
-    "plt.legend(fontsize = 14)\n",
+    "plt.hist(np.array(xvel), bins = numbins, density= True, alpha=0.5, label='reduced')\n",
+    "plt.hist(np.array(xvel_ref), bins = numbins, density= True, alpha=0.5, label='benchmark')\n",
+    "density = stats.kde.gaussian_kde(xvel)\n",
+    "#vv = np.arange(-1., 1, .02)\n",
+    "#plt.plot(vv, density(vv))\n",
+    "plt.legend()\n",
     "plt.xlabel(\"velocity\")\n",
     "plt.ylabel(\"velocity distribution\")\n",
     "#plt.show()\n",
@@ -306,27 +304,54 @@
    "outputs": [],
    "source": [
     "numbins=50\n",
-    "plt.hist(np.array(xpos), bins = numbins, density= True, alpha=0.5, label='x coarse-grain')\n",
-    "plt.hist(np.array(xpos_ref), bins = numbins, density= True, alpha=0.5, label='x reference')\n",
+    "plt.hist(np.array(zpos), bins = numbins, density= True, alpha=0.5, label='reduced')\n",
+    "plt.hist(np.array(zpos_ref), bins = numbins, density= True, alpha=0.5, label='benchmark')\n",
     "plt.legend()\n",
-    "plt.show()"
+    "plt.xlabel(\"position\")\n",
+    "plt.ylabel(\"position distribution\")\n",
+    "plt.xlim([-5,5])\n",
+    "plt.show()\n",
+    "#plt.savefig(\"position_test.pdf\", bbox_inches='tight')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "661d806e",
+   "id": "5b520d10",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c713bc4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Functions to calculate moments\n",
+    "def calculateMean(trajs):\n",
+    "    meanPosition = np.zeros(3)\n",
+    "    totalSamples = 0\n",
+    "    for traj in trajs:\n",
+    "        for i in range(len(traj)):\n",
+    "            meanPosition += traj[i][1:4]\n",
+    "        totalSamples += len(traj)\n",
+    "    meanPosition = meanPosition/totalSamples\n",
+    "    return meanPosition\n",
+    "\n",
+    "def calculateVariance(trajs, mean = None):\n",
+    "    if mean.any() == None:\n",
+    "        mean = calculateMean(trajs)\n",
+    "    variance = np.zeros(3)\n",
+    "    totalSamples = 0\n",
+    "    for traj in trajs:\n",
+    "        for i in range(len(traj)):\n",
+    "            devFromMean = traj[i][1:4] - mean\n",
+    "            variance += devFromMean*devFromMean\n",
+    "        totalSamples += len(traj)\n",
+    "    variance = variance/totalSamples\n",
+    "    return variance\n",
+    "\n",
+    "def calculateStdDev(trajs, mean = None):\n",
+    "    variance = calculateVariance(trajs, mean)\n",
+    "    stddev = np.sqrt(variance)\n",
+    "    return stddev\n",
+    "\n",
+    "def calculateAutoCorrelation(trajs, mean)"
+   ]
   }
  ],
  "metadata": {
